force-app/main/default/objects/Energy_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Audits</relationshipLabel>
        <relationshipName>Energy_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Energy_Usage_kWh__c</fullName>
        <label>Annual Energy Usage kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Annual_Electric_Cost__c</fullName>
        <label>Average Annual Electric Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_Of_Installation__c</fullName>
        <label>Type Of Installation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rooftop</fullName>
                </value>
                <value>
                    <fullName>Carport</fullName>
                </value>
                <value>
                    <fullName>Ground mounted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Energy Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Energy Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>